feat: Add reset stats endpoint
