# transport/http/http.go
@@ -50,7 +50,7 @@ func (transport *HTTP) initRoutes(r chi.Router) {
 	// Init CORS
 	r.Use(gochiCors.New(gochiCors.Options{
 		AllowedOrigins: []string{"*"},
-		AllowedMethods: []string{"GET"},
+		AllowedMethods: []string{"GET", "DELETE"},
 		AllowedHeaders: []string{"Accept", "Content-Type"},
 	}).Handler)
 
@@ -58,5 +58,6 @@ func (transport *HTTP) initRoutes(r chi.Router) {
 		r.Get("/ping", transport.endpoints.Ping)
 		r.Get("/fizz_buzz", transport.endpoints.FizzBuzz)
 		r.Get("/stats", transport.endpoints.RetrieveStats)
+		r.Delete("/stats/reset", transport.endpoints.ResetStats)
 	})
 }
